--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -6,7 +6,7 @@
     android:background="@color/white">
     <include layout="@layout/include_main_toolbar"/>
 
-    <com.app.aihealthapp.view.ProgressWebView
+    <com.app.aihealthapp.view.FragmentProgressWebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
