--- a/app/src/main/res/layout/include_main_toolbar.xml
+++ b/app/src/main/res/layout/include_main_toolbar.xml
@@ -19,6 +19,19 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/tv_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@mipmap/location_icon"
+        android:drawablePadding="@dimen/dimen_8px"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/dimen_16px"
+        android:gravity="center"
+        android:text="南宁市"
+        android:textSize="@dimen/text_14px"
+        android:textColor="@color/text_color"
+        android:visibility="gone"/>
+    <TextView
         android:id="@+id/tv_title_bar"
         style="@style/WrapWrap"
         android:layout_centerInParent="true"
