--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -113,7 +113,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/cash_details"
+                    android:drawableLeft="@mipmap/mind_cash"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="现金明细"
                     android:textColor="@color/text_color"
@@ -171,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_xxtx_icon"
+                    android:drawableLeft="@mipmap/mind_record"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="我的咨询问诊"
                     android:textColor="@color/text_color"
@@ -358,7 +358,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_circle"
+                    android:drawableLeft="@mipmap/mind_pyq_icon"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="我的健康朋友圈"
                     android:textColor="@color/text_color"
@@ -419,7 +419,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_address"
+                    android:drawableLeft="@mipmap/mind_add"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="收货地址"
                     android:textColor="@color/text_color"
