--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -201,7 +201,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_jkzs_icon"
+                    android:drawableLeft="@mipmap/mind_tjbg_icon"
                     android:drawablePadding="@dimen/text_10px"
                     android:text="我的检测报告"
                     android:textColor="@color/text_color"
@@ -232,7 +232,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dimen_16px"
-                    android:drawableLeft="@mipmap/mind_jkfa_icon"
+                    android:drawableLeft="@mipmap/mind_jkzs_icon"
                     android:drawablePadding="@dimen/text_10px"
                     android:gravity="center"
                     android:text="我的健康指数"
