--- a/app/src/main/res/layout/fragement_home.xml
+++ b/app/src/main/res/layout/fragement_home.xml
@@ -83,29 +83,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:id="@+id/ll_syncStep"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="@dimen/dimen_10px">
 
-                        <ImageView
-                            android:layout_width="@dimen/dimen_50px"
-                            android:layout_height="@dimen/dimen_50px"
-                            android:background="@mipmap/home_ydjb_icon"
-                            android:scaleType="centerCrop" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dimen_10px"
-                            android:text="运动记步"
-                            android:textColor="@color/text_color"
-                            android:textSize="@dimen/text_14px" />
-                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/ll_blood_pressure"
@@ -176,6 +154,29 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dimen_10px"
                             android:text="血氧测量"
+                            android:textColor="@color/text_color"
+                            android:textSize="@dimen/text_14px" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/ll_sleep"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:padding="@dimen/dimen_10px">
+
+                        <ImageView
+                            android:layout_width="@dimen/dimen_50px"
+                            android:layout_height="@dimen/dimen_50px"
+                            android:background="@mipmap/home_sleep"
+                            android:scaleType="centerCrop" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_10px"
+                            android:text="睡眠测量"
                             android:textColor="@color/text_color"
                             android:textSize="@dimen/text_14px" />
                     </LinearLayout>
