--- a/app/src/main/res/layout/include_main_toolbar.xml
+++ b/app/src/main/res/layout/include_main_toolbar.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="@dimen/text_16px"
         android:orientation="horizontal"
         android:gravity="center"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="@dimen/dimen_16px"
