--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -189,8 +189,9 @@
 
                 <TextView
                     android:id="@+id/tv_check_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/dimen_32px"
                     android:hint="选择时间"
