--- a/app/src/main/res/layout/acty_splash.xml
+++ b/app/src/main/res/layout/acty_splash.xml
@@ -3,13 +3,15 @@
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:fitsSystemWindows="true"
+
     >
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@mipmap/wecome"
-        android:fitsSystemWindows="true"
 
         />
 </FrameLayout>
